src/objects/JuchuData__c.object
<CustomObject>
    <fields>
        <fullName>SokudenShubetsuShokai__c</fullName>
        <formula>IF(OR(ISBLANK(Juchusaki__r.SokudenShubetsu__c), ISNULL(Juchusaki__r.SokudenShubetsu__c)),
  UrikakeData__r.SeikyuAccount__r.SokudenShubetsu__c,
  Juchusaki__r.SokudenShubetsu__c
)</formula>
        <label>￥￥_即伝種別照会</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SonotaError__c</fullName>
        <formula>IF ( 
 HikiateKanryoFlg__c , 
 &quot;&quot; ,

IF ( 
 SeikyuKakushiKeikoku__c  ,
 &quot;すべての明細に 請求隠 設定することはできません。請求書の明細に表示する明細を最低１つ残してください。&quot;  , 

IF ( 
 AND(
 ZaikoNashiNohimbiSu__c  &lt;&gt; 0 ,
 NOT( HikiateNashiFlg__c ) ) , 
 &quot;入力した納品予定日では消費期限を超過している商品が有ります。新たな商品を入荷させて下さい。&quot;  , 

IF ( 
 AND( 
 NOT(JuchuKakuteiFlg__c) , 
 NOT( HikiateKanryoFlg__c ) , 
 HikiateKanryoJotaiFlg__c ) , 
 &quot;引当解除しました。再引当して下さい。&quot;, 

IF ( 
 AND( 
 NOT( JuchuKakuteiFlg__c ) , 
 HikiateKanryoFlg__c ) , 
 &quot;引当完了フラグ　OFF　で引当済み在庫を開放します。&quot;, 

IF ( 
 MeisaiFuseiCount__c &gt;= 1, 
 &quot;数量が未入力「0個」の明細が有りますので個数を入力して下さい。&quot;, 


&quot;&quot;

))))))</formula>
        <inlineHelpText>その他の受注データ登録時に不正検出された内容。</inlineHelpText>
        <label>警告：その他</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuryoYusenFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックがない場合は賞味期限が近い在庫優先となります。</inlineHelpText>
        <label>小口在庫優先フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SutambaiFusei__c</fullName>
        <formula>AND(
 JidoHikiateFlg__c ,
 NohinYoteibi__c   &lt;=   TODAY() 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_当日スタンバイNG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TourokuMemoALL__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <description>Apexにより記入。</description>
        <inlineHelpText>商品資材マスタの追加の示唆（推奨/禁止）内容。
内容に応じ登録内容に参考。</inlineHelpText>
        <label>警告＋：登録</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TourokuMemo__c</fullName>
        <description>Apexにより記入。</description>
        <inlineHelpText>商品資材マスタの追加時に不正検出された内容。
不正検出された結果として明細の追加は行われない。</inlineHelpText>
        <label>警告：登録</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TsudoSeikyuFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>締請求から独立した請求集計を行う際にONする。
受注データの都度請求フラグONが集約される。
部分請求を行う際にON。</inlineHelpText>
        <label>都度請求フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UriageKakuteiFlg__c</fullName>
        <formula>UrikakeData__r.UriageKakuteiFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売掛データの売上確定フラグを反映。

本受注データが売上確定した売掛データに属している事を表す。</inlineHelpText>
        <label>売上確定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UriageShukeiBi__c</fullName>
        <inlineHelpText>通常は受注確定日と同一。

売上集計日は売掛データの検索に影響を与えない集計用の日付。
例）請求や納品確認とは独立し営業成績などの集計を行う場合。
例）経理上の売上と営業成績上の売上が同一ではない場合。</inlineHelpText>
        <label>受注集計日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UrikakeDataShokaibi__c</fullName>
        <formula>IF ( JuchuUriageKakuteiFlg__c ,
  JuchuUriageKakuteibi__c ,
  NohinYoteibi__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売掛データを検索する際の基準となる日付。

売掛データの新規生成時は、締期間起算日に代入される。

受注確定フラグONの場合は受注確定日。
受注確定フラグOFFの場合は提供予定日。</inlineHelpText>
        <label>￥￥_売掛データ照会日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UrikakeData__c</fullName>
        <label>請求集計データ</label>
        <referenceTo>UrikakeData__c</referenceTo>
        <relationshipLabel>受注出荷データ</relationshipLabel>
        <relationshipName>JuchuData_UrikakeData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UrikakeYoshinChoka__c</fullName>
        <formula>AND(
  UrikakeData__r.SeikyuAccount__r.UrikakeYoshinLimit__c  &gt; 0 ,
 UrikakeData__r.SeikyuAccount__r.UrikakeYoshinZan__c  &lt;  DenpyoKingakuKei__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_売掛与信超過</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZaikoHikiateSaki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷引当先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>JuchuData_ZaikoHikiateSaki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZaikoNashiNohimbiSu__c</fullName>
        <label>￥￥_在庫無納品日数カウント</label>
        <summaryFilterItems>
            <field>JuchuMeisaiData__c.ZaikoNashiNohimbiNamachi__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>JuchuMeisaiData__c.JuchuData__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZenSaiByogaFlg__c</fullName>
        <formula>AND(
 NOT( HikiateKanryoFlg__c ) , 
 NOT( JidoHikiateFlg__c )  ,
 NOT( HikiateNashiFlg__c )  ,

OR(
 SeikyuKakushiKeikoku__c , 
 AND( NOT(JuchuKakuteiFlg__c) , NOT( HikiateKanryoFlg__c ) , HikiateKanryoJotaiFlg__c ) , 
 AND( NOT( JuchuKakuteiFlg__c ) , HikiateKanryoFlg__c ) , 
 MeisaiFuseiCount__c &gt;= 1, 
 ZaikoNashiNohimbiSu__c &lt;&gt; 0 , 
 MeisaiGyosuChokaHanteiFlg__c , 
 UrikakeData__r.SeikyuKakuteiFlg__c , 
 UrikakeYoshinChoka__c , 
 AND( NOT( HikiateKanryoFlg__c ), NeedAllLot__c != 0, NOT( OR( ShomiKigenKonzaiFlg__c, LotKonzaiFlg__c )) ), 
 AND( NOT( HikiateKanryoFlg__c ), NeedReduction__c != 0 )
)

)</formula>
        <inlineHelpText>引当無フラグ＝OFF　かつ　その他エラー＝ON　あるいは　警告：受注エラー＝ON　あるいは　警告：数量エラー＝ON　の場合にON。</inlineHelpText>
        <label>￥￥_描画フラグ_全画面</label>
        <type>Checkbox</type>
    </fields>
    <label>受注出荷データ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DenpyoNo__c</columns>
        <columns>HikiateKanryoFlg__c</columns>
        <columns>HikiateZanjiKaijo__c</columns>
        <columns>HikiateZanjiKakutei__c</columns>
        <columns>JuchuKakuteiFlg__c</columns>
        <columns>JidoHikiateFlg__c</columns>
        <columns>JuchuMeisaiDataGyosu__c</columns>
        <columns>Juchubi__c</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>HikiateKakuteibi__c</columns>
        <columns>JuchuUriageKakuteibi__c</columns>
        <columns>UriageShukeiBi__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20150401a</fullName>
        <columns>NAME</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>HikiateKanoFlg__c</columns>
        <columns>HikiateZanjiKakutei__c</columns>
        <columns>HikiateZanjiKaijo__c</columns>
        <columns>JuchuKakuteiFlg__c</columns>
        <columns>JidoHikiateYoyaku__c</columns>
        <columns>JidoHikiateFlg__c</columns>
        <columns>JuchuUriageKakuteiFlg__c</columns>
        <columns>JuchuUriageKakuteibi__c</columns>
        <columns>JuchuMeisaiDataGyosu__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HikiateKanryoFlg__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>．引当未完了確認</label>
    </listViews>
    <listViews>
        <fullName>View20150407a</fullName>
        <columns>NAME</columns>
        <columns>ShomiKigenKonzaiFlg__c</columns>
        <columns>LotKonzaiFlg__c</columns>
        <columns>SuryoYusenFlg__c</columns>
        <columns>HikiateKanoFlg__c</columns>
        <columns>NohinYoteibi__c</columns>
        <filterScope>Everything</filterScope>
        <label>．混在フラグ確認</label>
    </listViews>
    <listViews>
        <fullName>View20160418b</fullName>
        <columns>NAME</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>JuchuUriageKakuteiFlg__c</columns>
        <columns>JuchuUriageKakuteibi__c</columns>
        <columns>SeikyushoHizuke__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JuchuUriageKakuteiFlg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>．受注確定確済認</label>
    </listViews>
    <listViews>
        <fullName>View20160418c</fullName>
        <columns>NAME</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>JuchuKakuteiFlg__c</columns>
        <columns>JidoHikiateFlg__c</columns>
        <columns>HikiateZanjiKaijo__c</columns>
        <columns>HikiateZanjiKakutei__c</columns>
        <columns>HikiateKanryoFlg__c</columns>
        <columns>JuchuUriageKakuteibi__c</columns>
        <columns>JuchuUriageKakuteiFlg__c</columns>
        <columns>HikiateKakuteibi__c</columns>
        <columns>JuchuMeisaiDataGyosu__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HikiateKanryoFlg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>．引当完了済確認</label>
    </listViews>
    <listViews>
        <fullName>View20160418d</fullName>
        <columns>NAME</columns>
        <columns>NohinYoteibi__c</columns>
        <columns>JuchuUriageKakuteiFlg__c</columns>
        <columns>JuchuUriageKakuteibi__c</columns>
        <columns>SeikyushoHizuke__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JuchuUriageKakuteiFlg__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>．受注未確定確認</label>
    </listViews>
    <listViews>
        <fullName>View20160827a</fullName>
        <columns>NAME</columns>
        <columns>SonotaError__c</columns>
        <columns>JuchuError__c</columns>
        <columns>JuchuSuryoMemo__c</columns>
        <columns>TourokuMemo__c</columns>
        <columns>HikiateMemo__c</columns>
        <columns>TourokuMemoALL__c</columns>
        <columns>HikiateMemoALL__c</columns>
        <columns>KoteiKoseiMemoALL__c</columns>
        <filterScope>Everything</filterScope>
        <label>．警告確認</label>
    </listViews>
    <nameField>
        <label>受注出荷</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>